--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - directus
 
   directus:
-    image: "directus/directus:latest"
+    image: "directus/directus:10.8.2"
     restart: "unless-stopped"
     ports:
       - "8055:8055"
@@ -46,6 +46,7 @@ services:
       - CORS_ORIGIN=true
     volumes:
       - "./data/directus/uploads:/directus/uploads:rw"
+      - "./conf/directus/extensions/modules/api-viewer:/directus/extensions/modules/api-viewer"
     logging:
       driver: "json-file"
       options:
